# bw

./: CLAUDE.md  Cargo.toml  README.md  build.rs
src/: error.rs  main.rs
src/commands/: bw.rs  config.rs  get.rs  mod.rs
src/config/: mod.rs
src/git/: clone.rs  mod.rs
src/url/: mod.rs  parser.rs
