[package]
name = "bw"
version = "0.1.0"
edition = "2021"
description = "A ghq-like tool for bare clone with worktree support"
license = "MIT"
repository = "https://github.com/shuntaka9576/ghbare"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = "0.19"
thiserror = "2.0"
anyhow = "1.0"
dirs = "6.0"
url = "2.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
strip = true
